# PlugPulseEV

./: .env.prod.example  .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  DEPLOYMENT.md  PERFORMANCE.md  PlugPulse-Project-Spec.md  README.md  SEO.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: auth.py  cache.py  config.py  db.py  geo.py  ingest.py  main.py  ocm.py  osm.py  scoring.py  stations.py
backend/migrations/: 001_init.sql  002_users.sql  003_connectors_gin.sql  004_station_source.sql
backend/tests/: test_auth.py  test_ocm.py  test_osm.py  test_scoring.py  test_stations.py
docs/handbook/: 01-what-is-plugpulse.md  02-how-its-built.md  03-where-it-lives.md  04-free-vs-open-source.md  05-hosting-choices.md  06-deploy-the-backend.md  07-accounts-and-login.md  08-the-reliability-score.md  09-glossary.md  README.md
frontend/: .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json  svelte.config.js  vitest.config.ts
frontend/src/: app.css  app.d.ts  app.html  auth.ts  hooks.server.ts
frontend/src/lib/: api.ts  (+10 more)
frontend/static/: llms.txt  robots.txt
frontend/tests/: overhaul-helpers.test.ts  perf-helpers.test.ts  reliability.test.ts  seo.test.ts  stations.test.ts  theme.test.ts
(+3 files in other folders)
